examples/invalid/semantic/prueba_duplicada.casc
programa {
  entero edad;
  cadena edad;
}